5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1679_1105.log
== TEST (2019-04-18 03:06:40) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = int(input("descricao do brasao: "))

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    brasao = int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:06:45) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = int(input("descricao do brasao: "))

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    brasao = int(input())
ValueError: invalid literal for int() with base 10: 'lula'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:06:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = (input("descricao do brasao: "))

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:06:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = (input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
File "XXXX", line 6
    if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta":
                                                                                                                                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:07:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = (input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta" :
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
File "XXXX", line 6
    if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brusao == "turta" :
                                                                                                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:07:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = (input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta" :
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
File "XXXX", line 6
    if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta" :
                                                                                                                                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 03:08:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- EXECUTION TIME:
0.222935
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1105/main.py", line 7, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == lobo:
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if brasao == lobo:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Brasao:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao: Invalido")
-- OUTPUT:
Entrada: lula
Brasao: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:34) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:38) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 03:08:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Casa: Invalido")
-- EXECUTION TIME:
0.154698
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Casa: Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:08:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Casa: Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 03:09:04) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.133723
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
descricao do brasao: Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:09:05) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:12:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 03:12:44) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.201703
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
descricao do brasao: Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
descricao do brasao: Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
descricao do brasao: Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:12:55) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:12:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:12:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-18 03:13:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-18 03:13:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

brasao = input("descricao do brasao: ")

if brasao == "lobo" or brasao == "leao" or brasao == "veado" or brasao == "dragao" or brasao == "rosa" or brasao == "sol" or brasao == "lula" or brasao == "esfolado" or brasao == "turta":
	if brasao == "lobo":
		casa = ("Stark")
	elif brasao == "leao":
		casa = ("Lannister")
	elif brasao == "veado":
		casa = ("Baratheon")
	elif brasao == "dragao":
		casa = ("Targaryen")
	elif brasao == "rosa":
		casa = ("Tyrell")
	elif brasao == "sol":
		casa = ("Martell")
	elif brasao == "lula":
		casa = ("Greyjoy")
	elif brasao == "esfolado":
		casa = ("Bolton")
	elif brasao == "turta":
		casa = ("Tully")
	print("Entrada:", brasao)
	print("Casa:", casa)
else:
	print("Entrada: ", brasao)
	print("Brasao invalido")
-- EXECUTION TIME:
0.196442
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
